Version 0.9.1:
        * corrected version number on dso's (libtool) - now 1.0

Version 0.9.0:
	* initial release
	* New build scripts for Linux/Unix
	  (Andrew Kunz)
	* New Windows project files and build scripts
	  (Kimball Thurston)