@@ -4,7 +4,7 @@ lib_LTLIBRARIES = libIlmImfCtl.la
 
 INCLUDES = @CTL_CXXFLAGS@ @OPENEXR_CXXFLAGS@
 
-AM_LDFLAGS = @CTL_LDFLAGS@ @OPENEXR_LDFLAGS@
+AM_LDFLAGS = @CTL_LDFLAGS@ @OPENEXR_LDFLAGS@ @CTL_LIBS@ @OPENEXR_LIBS@
 
 
 libIlmImfCtl_la_SOURCES = \
