@@ -1,5 +1,10 @@
 Version 0.9.1:
+	Installation Tuning 
         * corrected version number on dso's (libtool) - now 1.0
+	* Separated package's LDFLAGS and LIBS flags so that test programs
+	can link with static libraries properly
+	* eliminated some warning messages during install
+	(Andrew Kunz)
 
 Version 0.9.0:
 	* initial release
